[package]
name = "const-rsa"
authors = ["Leon Farafonov <leofaraf@proton.me>"]
version = "0.0.2"
edition = "2021"

[lib]
proc_macro = true
path = "src/lib.rs"

[dependencies]
rand = "0.8.5"
rsa = { version = "0.9.6", features = ["pem"] }
syn = { version = "2", features = ["full"] }
quote = "1.0"
base64 = "0.22"
proc-macro2 = "1"
